Adding azure login step

--- a/.github/workflows/terraformcicd.yml
+++ b/.github/workflows/terraformcicd.yml
@@ -1,33 +1,23 @@
-name: Terraform CI/CD
+name: Run Azure Login with OpenID Connect
+on: [push]
 
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  terraform:
+permissions:
+      id-token: write
+      contents: read
+      
+jobs: 
+  build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
-
-      - name: Setup Terraform
-        run: |
-          curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/local/bin/terraform
-          sudo chmod +x /usr/local/bin/terraform
-        shell: bash
-
-      - name: Login to Azure
-        run: az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
-
-      - name: Initialize Terraform
-        run: terraform init
-
-      - name: Plan Terraform Changes
-        run: terraform plan -out=tfplan -input=false
-
-      - name: Apply Terraform Changes
-        run: terraform apply -input=false tfplan
-
+    - name: 'Az CLI login'
+      uses: azure/login@v1
+      with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+  
+    - name: 'Run Azure CLI commands'
+      run: |
+          az account show
+          az group list
+          pwd
