--- a/.github/workflows/terraformcicd.yml
+++ b/.github/workflows/terraformcicd.yml
@@ -16,3 +16,15 @@ jobs:
         with:
           inlineScript: Get-AzResourceGroup -Name "TF-State"
           azPSVersion: "latest"
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v1
+        with: 
+          terraform_version: 1.5.6
+      - name: Initialize Terraform
+        run: terraform init
+      - name: Plan Terraform Changes
+        run: terraform plan -out=tfplan -input=false
+      - name: Apply Terraform Changes
+        run: terraform apply -input=false tfplan
+      - name: Clean up
+        run: rm -rf .terraform
