--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Log in with Azure
       uses: azure/login@v1
       with:
-        creds: '${{ secrets.AZURE_CREDENTIALS }}''
+        creds: '${{ secrets.AZURE_CREDENTIALS }}'
         enable-AzPSSession: true
     - name: Azure Powershell@v1
       uses: Azure/powershell@v1
@@ -20,11 +20,6 @@ jobs:
         inlineScript: Get-AzResourceGroup -Name "TF-State"
         azPSVersion: "latest"
       
-  terraform-unit-tests:
-    name: 'Terraform Unit Tests'
-    runs-on: ubuntu-latest
-    
-    steps:
     # Checkout the repository to the GitHub Actions runner
     - name: Checkout
       uses: actions/checkout@v3
