--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,7 +1,9 @@
 name: 'Terraform Unit Tests'
 
 on:
-  push
+  push:
+    branches:
+      - main
 
 jobs:
   build-and-deploy:
@@ -9,24 +11,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    # Checkout the repository to the GitHub Actions runner
+    - name: Checkout
+      uses: actions/checkout@v3
+  
+    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v2
     - name: Log in with Azure
       uses: azure/login@v1
       with:
         creds: '${{ secrets.AZURE_CREDENTIALS }}'
-        enable-AzPSSession: true
-    - name: Azure Powershell@v1
-      uses: Azure/powershell@v1
-      with:
-        inlineScript: Get-AzResourceGroup -Name "TF-State"
-        azPSVersion: "latest"
-      
-    # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v3
-
-    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
