--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -33,11 +33,7 @@ jobs:
         tf_actions_working_dir: "./"
         
     - name: 'Terraform Init'
-      uses: hashicorp/terraform-github-actions@master
-      with:
-        tf_actions_version: 0.14.8
-        tf_actions_subcommand: 'init'
-        tf_actions_working_dir: "./terraform"
+      run: pwd
 
     - name: 'Terraform Validate'
       uses: hashicorp/terraform-github-actions@master
