--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -26,14 +26,14 @@ jobs:
       uses: actions/checkout@v2
 
     - name: 'Terraform Format'
+      run: pwd
+        
+    - name: 'Terraform Init'
       uses: hashicorp/terraform-github-actions@master
       with:
         tf_actions_version: 0.14.8
-        tf_actions_subcommand: 'fmt'
-        tf_actions_working_dir: "./"
-        
-    - name: 'Terraform Init'
-      run: pwd
+        tf_actions_subcommand: 'init'
+        tf_actions_working_dir: "./terraform"
 
     - name: 'Terraform Validate'
       uses: hashicorp/terraform-github-actions@master
