--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -28,25 +28,30 @@ jobs:
     - name: 'Terraform Format'
       uses: hashicorp/terraform-github-actions@master
       with:
+        tf_actions_version: 0.14.8
         tf_actions_subcommand: 'fmt'
         
     - name: 'Terraform Init'
       uses: hashicorp/terraform-github-actions@master
       with:
+        tf_actions_version: 0.14.8
         tf_actions_subcommand: 'init'
 
     - name: 'Terraform Validate'
       uses: hashicorp/terraform-github-actions@master
       with:
+        tf_actions_version: 0.14.8
         tf_actions_subcommand: 'validate'
         
     - name: 'Terraform Plan'
       uses: hashicorp/terraform-github-actions@master
       with:
+        tf_actions_version: 0.14.8
         tf_actions_subcommand: 'plan'
 
     - name: Terraform Apply
       if: github.ref == 'refs/heads/main'
       uses: hashicorp/terraform-github-actions@master
       with:
+        tf_actions_version: 0.14.8
         tf_actions_subcommand: 'apply'
